# fpm-on-wheels

./: .gitignore  CMakeLists.txt  README.md  __main__.py  meson.build  pyproject.toml  setup.py
.github/workflows/: wheel.yml
docs/: README.md
scripts/: cibw_before_build_macos.sh
src/fpm/: __init__.py
subprojects/: .gitignore  M_CLI2-7264878cdb1baff7323cc48596d829ccfe7751b8.wrap  fpm-0.7.0.wrap  toml-f-0.3.1.wrap
subprojects/packagefiles/M_CLI2/: meson.build
subprojects/packagefiles/fpm-0.7.0/: meson.build  meson_options.txt
test/: run_fpm_tests.py
tools/: run_tests.py
tools/wheels/: README.md  cibw_before_build_macos.sh  gfortran_utils.sh
