[build-system]
requires = ["scikit-build-core>=0.11", "setuptools_scm>=8.1"]
build-backend = "scikit_build_core.build"

[project]
name = "fpm"
license = { text = "MIT" }
authors = [{ name = "fpm maintainers" }]
requires-python = ">=3.7"
description = "Fortran package manager"
readme = "docs/README.md"
keywords = ["fpm", "fortran", "package manager"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Fortran",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Pre-processors",
    "Topic :: Utilities",
]
dynamic = ["version"]

[project.urls]
homepage = "https://fpm.fortran-lang.org"
source-code = "https://github.com/fortran-lang/fpm"
bug-tracker = "https://github.com/fortran-lang/fpm/issues"

[project.scripts]
fpm = "fpm:main"

[tool.scikit-build]
wheel.packages = ["src/fpm"]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
build.verbose = true

[[tool.scikit-build.overrides]]
if.platform-system = "win32"
cmake.args = ["-G", "MSYS Makefiles"]

[tool.cibuildwheel]
build = "cp311-*"
build-verbosity = 3
test-command = "python {project}/tools/run_tests.py --tag v0.12.0"
test-skip = "*-*linux_{aarch64,ppc64le,s390x,armv7l}"  # Skip emulated architectures

[tool.cibuildwheel.macos]
archs = ["auto"]
environment = { CC = "clang", CXX = "clang++", FC = "gfortran-12", PATH = "/opt/homebrew/bin:/usr/local/bin:$PATH" }
before-all = "brew install gcc@12"

[[tool.cibuildwheel.overrides]]
select = "*-macosx_arm64"
environment = { MACOSX_DEPLOYMENT_TARGET = "14.0", FC = "/opt/homebrew/bin/gfortran-12" }

[[tool.cibuildwheel.overrides]]
select = "*-macosx_x86_64"
environment = { MACOSX_DEPLOYMENT_TARGET = "14.0", FC = "/usr/local/bin/gfortran-12" }

[tool.cibuildwheel.windows]
archs = ["auto64"]
environment = { CC = "gcc", CXX = "g++", FC = "gfortran" }
