[build-system]
requires = [
    "setuptools>=80",
    "scikit-build>=0.16.7",
    "cmake>=4.1.0",
    "ninja",
    "setuptools_scm>=8",
]
build-backend = "setuptools.build_meta"

[project]
name = "fpm"
license = "MIT"
authors = [{ name = "fpm maintainers" }]
requires-python = ">=3.7"
description = "Fortran package manager"
readme = "docs/README.md"
keywords = ["fpm", "fortran", "package manager"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Fortran",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Pre-processors",
    "Topic :: Utilities",
]
dynamic = ["version", "entry-points", "scripts"]

[project.urls]
homepage = "https://fpm.fortran-lang.org"
source-code = "https://github.com/fortran-lang/fpm"
bug-tracker = "https://github.com/fortran-lang/fpm/issues"

[tool.setuptools_scm]
write_to = "src/fpm/_version.py"

[tool.cibuildwheel]
build = "cp311-*"
build-verbosity = 3

[tool.cibuildwheel.macos]
archs = ["auto"]
environment = { CC = "clang", CXX = "clang++", FC = "gfortran-12", PATH = "/opt/homebrew/bin:/usr/local/bin:$PATH" }
before-all = "brew install gcc@12"

[[tool.cibuildwheel.overrides]]
select = "*-macosx_arm64"
environment = { MACOSX_DEPLOYMENT_TARGET = "14.0", FC = "/opt/homebrew/bin/gfortran-12" }

[[tool.cibuildwheel.overrides]]
select = "*-macosx_x86_64"
environment = { MACOSX_DEPLOYMENT_TARGET = "14.0", FC = "/usr/local/bin/gfortran-12" }

[tool.cibuildwheel.windows]
archs = ["auto64"]
environment = { CC = "gcc", CXX = "g++", FC = "gfortran" }
